--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<p class="lead">
+<p class="lead col">
     Oops, page not found
 </p>
-<p>404 error</p>
+<p class="col">404 error</p>
 {% endblock %}
