Modefied error templates

--- a/templates/400.html
+++ b/templates/400.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<p class="lead col">
+<p class="lead col-12">
     Oops, bad request
 </p>
-<p class="col">400 error</p>
+<p class="col-12">400 error</p>
 {% endblock %}
