--- a/templates/403.html
+++ b/templates/403.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<p class="lead col">
+<p class="lead col-12">
     Oops, permission denied
 </p>
-<p class="col">403 error</p>
+<p class="col-12">403 error</p>
 {% endblock %}
