--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<p class="lead col">
+<p class="lead col-12">
     Oops, a server error occured
 </p>
-<p class="col">500 error, We are working on it</p>
+<p class="col-12">500 error, We are working on it</p>
 {% endblock %}
