--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<p class="lead col">
+<p class="lead col-12">
     Oops, page not found
 </p>
-<p class="col">404 error</p>
+<p class="col-12">404 error</p>
 {% endblock %}
