--- a/templates/snippets/guest_form.html
+++ b/templates/snippets/guest_form.html
@@ -1,4 +1,4 @@
-<form method="POST" action="{% url 'cart:guest' %}" novalidate>
+<form method="POST" action="{% url 'accounts:guest' %}" novalidate>
     {% csrf_token %}
     {% if next %}
     <input type="hidden" name="next" value="{{ next }}">
