--- a/templates/products.html
+++ b/templates/products.html
@@ -3,9 +3,9 @@
     {% if request.GET.q %}
     <p class="col-sm-12">Search results for <strong>{{ request.GET.q}}</strong></p>
     {% endif %}
-    <div class="col-12">
-        <form method="POST" action="{% url 'cart:add-all' %}" class="addAll" novalidate>
-            <button type="submit" class="btn btn-outline-primary mt-4 w-25">Add All</button>
+    <div class="col-12 mx-auto">
+        <form method="POST" action="{% url 'cart:add-all' %}" class="addAll w-25 mx-auto" novalidate>
+            <button type="submit" class="btn btn-outline-primary w-100 mt-4 w-25">Add All</button>
             {% csrf_token %}
         </form>
     </div>
