--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action="" method="post">{% csrf_token %}
+<form method="post">{% csrf_token %}
     {% if form.email.errors %} {{ form.email.errors }} {% endif %}
         <div class="form-group">
             {{ form.email.label }}
