--- a/templates/snippets/contact_form.html
+++ b/templates/snippets/contact_form.html
@@ -3,20 +3,17 @@
     <div class="form-group">
         <label for="name">Name: </label>
         <input type="text" name="name" value="" placeholder="Your name" class="form-control">
-        <p class="nameErrors text-danger"></p>
-        {{ form.name.errors }}
+        <p class="nameErrors text-danger">{{ form.name.errors }}</p>
     </div>
     <div class="form-group">
         <label for="email">Email: </label>
         <input type="email" name="email" value="" placeholder="yourname@email.com" class="form-control">
-        <p class="emailErrors text-danger"></p>
-        {{ form.email.errors }}
+        <p class="emailErrors text-danger">{{ form.email.errors }}</p>
     </div>
     <div class="form-group">
         <label for="message">Your message: </label>
         <textarea name="message" cols="5" rows="3" class="form-control"></textarea>
-        <p class="messageErrors text-danger"></p>
-        {{ form.message.errors }}
+        <p class="messageErrors text-danger">{{ form.message.errors }}</p>
     </div>
     <button type="submit" class="btn btn-primary w-25">Send</button>
 </form>
