--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -12,7 +12,7 @@
         {% include 'snippets/guest_form.html' with form=guest_form next=request.build_absolute_uri %}
     </div>
 {% else %}
-    {% if not order.shipping_address %}
+    {% if not order.shipping_address and shipping_address_required %}
         <div class="col-md-6">
             <h3 class="mb-4">Shipping Address</h3>
             {% include 'address/form.html' with form=shipping_form next=request.build_absolute_uri address_type='shipping' action=action %}
